--- a/src/style.css
+++ b/src/style.css
@@ -27,11 +27,10 @@ font-size: large;
   background-color: rgb(85, 148, 161);
 }
 .today-icon {
-  font-size: 40px;
-}
-.temperature-and-units {
+  width: 80px;
   position: relative;
-  left: 20px;
+  bottom: 12px;
+  left: -15px;
 }
 .temperature {
   font-size: 50px;
